# type-traits-mateonoel2

./: CMakeLists.txt  lists.out  main.cpp  node.h  self_list.h  traits_list.h
lists.out.dSYM/Contents/Resources/DWARF/: lists.out
test/: tester.cpp
